HIL/src/objects/Group_Account__c.object
<CustomObject>
    <description>This object represents the relationship between a &quot;relationship group&quot; and a financial account.</description>
    <fields>
        <fullName>Cash_Available__c</fullName>
        <formula>Financial_Account__r.Cash_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Group Accounts</relationshipLabel>
        <relationshipName>Group_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Money_Market_Balance__c</fullName>
        <formula>Financial_Account__r.Money_Market_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Money Market Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Group</label>
        <referenceTo>Relationship_Group__c</referenceTo>
        <relationshipLabel>Group Accounts</relationshipLabel>
        <relationshipName>Group_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Assets__c</fullName>
        <formula>Financial_Account__r.Total_Account_Equity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Account Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , &quot;View&quot;, &quot;_self&quot;)</formula>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Group Account</label>
    <nameField>
        <displayFormat>GA-{000000}</displayFormat>
        <label>Group Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>